--- a/index.html
+++ b/index.html
@@ -16,6 +16,15 @@
 
 </head>
 <body style="background: rgba(0,0,0,0.1)">
+    <style>
+        @media (max-width:576px){
+            .txt{
+                font-size: 29px;
+
+
+            }
+        }
+    </style>
     <!--Nav-->
     <section class="container-fluid gg nav-section">
     <nav class="navbar navbar-expand-lg navbar-light">
@@ -41,7 +50,7 @@
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         Hardware
                     </a>
-                    <div class="dropdown-menu gg d-none d-sm-block" aria-labelledby="navbarDropdown">
+                    <div class="dropdown-menu gg " aria-labelledby="navbarDropdown">
                         <a class="dropdown-item " href="#">Controller</a>
                         <a class="dropdown-item" href="#">Headset</a>
                         <a class="dropdown-item " href="#">Remote</a>
@@ -58,7 +67,7 @@
     </section>
     <section class="jumbotron jumbotron-fluid gg my-0">
         <div class="row pt-2 no-gutters">
-            <div class="col-md-4 offset-md-2 pt-5 ps-left">
+            <div class="col-md-4 offset-md-2 pt-5 ps-left p-4">
                 <div class="row justify-content-center pt-4">
                     <h1 class="middle text-dark animate__animated animate__bounceInDown animate__delay-1s">PlayStation®5</h1>
                     <p class="paragraph pt-3 p-xs-5">Experience lightning-fast loading with an ultra-high speed SSD, deeper immersion with support for haptic feedback, adaptive triggers and 3D Audio,
@@ -69,25 +78,25 @@
                     animate__delay-2s" style="width: 100px">Buy it</button>
                 </div>
             </div>
-            <div class="col-md-6 pl-5 ps-right mt-xs-4">
-                <img src="image/PS-5.png"  width="400px" height="400px">
+            <div class="col-md-6 pl-xl-5 pl-sm-4 ps-right mt-xs-4">
+                <img src="image/PS-5.png"  width="370px" height="400px">
             </div>
         </div>
     </section>
     <section class="controller pt-5">
-        <div class="container">
+        <div class="container-fluid">
             <div class="row justify-content-center ">
-                <h1 >Dual Wireless Controller<hr class="bg-dark"></h1>
+                <h1 class="txt" >Dual Wireless Controller<hr class="bg-dark"></h1>
             </div>
-    <div class="row no-gutters pt-5">
-        <div class="col-md-6 control-left">
-            <img src="image/dualcontroller.png" width="400px" height="400px">
+    <div class="row no-gutters pt-5 ">
+        <div class="col-md-6 offset-md-1 control-left">
+            <img src="image/dualcontroller.png" width="370px" height="400px">
         </div>
-        <div class="col-md-6 pt-5 control-right">
+        <div class="col-md-4 pt-5  control-right">
             <div class="row  no-gutters">
 
                 <h2 class="middle">DualSense&#8482; charging station</h2>
-                <p class="paragraph pt-2">Charge up to two DualSense wireless controllers simultaneously
+                <p class="paragraph p-xs-5">Charge up to two DualSense wireless controllers simultaneously
                     without having to connect them to your PlayStation 5 console.</p>
                 <button class="btn btn-primary mt-2 english " style="height: 45px">Find out more</button>
             </div>
@@ -98,18 +107,18 @@
     <section class="new-feature gg pt-5 pb-5">
         <div class="container pt-5 pb-5">
             <div class="row justify-content-center">
-                <h1>New Feature Product<hr class="bg-dark"></h1>
+                <h1 class="txt">New Feature Product<hr class="bg-dark"></h1>
             </div>
             <div class="row pt-5">
-                <div class="col-md-4 product-left">
-                    <div class="card bg-dark text-white text-center pt-5">
+                <div class="col-md-4 product-left pb-4">
+                    <div class="card bg-dark text-white text-center pt-5 ">
                         <img src="image/Headset.png" class="image-fluid" height="270px">
                         <h2 class="pt-5"> wireless headset</h2>
                         <p class="english p-3">Play in comfort with a wireless
                             headset fine-tuned for 3D Audio Featuring USB Type-C® charging.</p>
                     </div>
                 </div>
-                <div class="col-md-4 product-center">
+                <div class="col-md-4 product-center pb-4">
                     <div class="card bg-dark text-white text-center pt-5">
                         <img src="image/Remote.png" class="image-fluid" height="270px">
                         <h2 class="pt-5">Media remote</h2>
