--- a/index.html
+++ b/index.html
@@ -79,20 +79,20 @@
                 </div>
             </div>
             <div class="col-md-6 pl-xl-5 pl-sm-4 ps-right mt-xs-4">
-                <img src="image/PS-5.png"  width="370px" height="400px">
+                <img src="image/PS-5.png"  width="370px" height="370px">
             </div>
         </div>
     </section>
     <section class="controller pt-5">
-        <div class="container-fluid">
+        <div class="container">
             <div class="row justify-content-center ">
                 <h1 class="txt" >Dual Wireless Controller<hr class="bg-dark"></h1>
             </div>
     <div class="row no-gutters pt-5 ">
-        <div class="col-md-6 offset-md-1 control-left">
-            <img src="image/dualcontroller.png" width="370px" height="400px">
+        <div class="col-md-6  control-left offset-md-1">
+            <img src="image/dualcontroller.png" width="340px" height="370px" class="pl-md-5 ml-md-1">
         </div>
-        <div class="col-md-4 pt-5  control-right">
+        <div class="col-md-5 pt-5  control-right">
             <div class="row  no-gutters">
 
                 <h2 class="middle">DualSense&#8482; charging station</h2>
